# core-team

./: Makefile  README.md  docker-compose.yml
ai/: Dockerfile  pyproject.toml
ai/src/: __main__.py  api.py  book_searcher.py  constants.py  giga_chat_service.py  pydantic_models.py  recommendation_service.py
ai/src/rag/: book_searcher.py  embedding_model.py  indexer.py
backend/: .gitignore
backend/Libs/InfraLib/: InfraLib.csproj  InfraStartUp.cs
backend/Libs/InfraLib/Database/: DatabaseStartUp.cs
backend/Libs/InfraLib/Logging/: SerilogStartUp.cs
backend/Libs/InfraLib/MinIO/: MinioStartUp.cs
backend/Libs/InfraLib/Models/: UserRole.cs
backend/Libs/InfraLib/Swagger/: SwaggerStartUp.cs
backend/UnifiedReader/: UnifiedReader.sln
backend/UnifiedReader/Api/: Api.csproj  Dockerfile  Program.cs  StartUp.cs  appsettings.Development.json
backend/UnifiedReader/Api.Tests/: Api.Tests.csproj  AuthControllerLoginTests.cs  BooksControllerBookTests.cs
backend/UnifiedReader/Api/Controllers/: AdminController.cs  AuthController.cs  BooksController.cs  EventsController.cs  UsersController.cs
backend/UnifiedReader/Dal/: Dal.csproj  DalStartUp.cs
backend/UnifiedReader/Dal/Users/: User.cs  (+2 more)
backend/UnifiedReader/Logic/: Logic.csproj  LogicStartUp.cs
bot/: Dockerfile  pyproject.toml
bot/src/: __main__.py  handlers.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/pages/: LogOut.tsx  NotFound.tsx  Unauthorized.tsx
frontend/src/utils/: axiosInstance.js
init-scripts/: 01-init.sql  readme.md
(+96 files in other folders)
