[project]
name = "ai"
version = "0.1.0"
description = ""
authors = [
    { name = "Aleksey", email = "skvch.al@gmail.com" }
]
requires-python = ">=3.12,<4.0"

dependencies = [
    "fastapi>=0.121.3,<0.122.0",
    "uvicorn>=0.38.0,<0.39.0",
    "python-dotenv>=1.2.1,<2.0.0",
    "chromadb>=1.3.5,<2.0.0",
    "sentence-transformers>=5.1.2,<6.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]  # указываем папку с кодом

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"