[project]
name = "ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksey",email = "skvch.al@gmail.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.12"
dependencies = [
    "fastapi (>=0.121.3,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "gigachat (>=0.1.43,<0.2.0)",
    "chromadb (>=1.3.5,<2.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
